# arqlegistech

./: 404.html  CNAME  README.md  angular.json  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml
apresentacao/: index.html
arquitetura/estrutura_controladores_servicos/: index.html
arquitetura/fluxo_ingestao_sip_aip_dip/: index.html
arquitetura/mapa_rotas_angular_backend/: index.html
assets/: extra.css
backend/: .env  package-lock.json  package.json  server.js
backend/api/: criarDocumento.js  obterDocumentoID.js  seguranca.js
backend/config/: db.js
backend/controllers/: documentoController.js  gerenciarDocumento.js
backend/middlewares/: autenticarJWT.js  errorHandler.js  gerarToken.js  hashSenhas.js  loginGerarSessao.js  protegerRotas.js
backend/models/: Acesso.js  Documento.js  Entidade.js  PropriedadeIntelectual.js  Seguranca.js
backend/routes/: acessoRoutes.js  documentoRoutes.js  propriedadeRoutes.js  segurancaRoutes.js
colaboracao/: instalar_wiki_local.py
colaboracao/infografico_visual/: index.html
colaboracao/perfis_escopos_integracao_frontend/: index.html
docs/: README.md  apresentacao.md  home.md  index.md
docs/arquitetura/: estrutura_controladores_servicos.md  fluxo_ingestao_sip_aip_dip.md  mapa_rotas_angular_backend.md
docs/assets/: extra.css
docs/colaboracao/: infografico_visual.md  instalar_wiki_local.py  perfis_escopos_integracao_frontend.md
docs/funcionalidades/: relatorio_conformidade_servicos_normalizacao.md  (+2 more)
home/: index.html
search/: search_index.json
site/: 404.html
src/: index.html
(+17 files in other folders)
