[project]
name = "arqlegistech"
version = "0.1.0"
description = ""
authors = [
    {name = "wilsonpalmeira",email = "wilsonpalmeirajr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.16"

